--- a/src/main/webapp/healthManage.html
+++ b/src/main/webapp/healthManage.html
@@ -59,17 +59,18 @@
     <h2 class="jm-title" style="padding-top: 15px">[测试须知]</h2>
     <hr data-am-widget="divider" style="margin: 0.5rem auto" class="am-divider am-divider-dotted"/>
     <span>
-    月费会员299元，活动地点卢湾体育馆、静安体育馆中午12:00-13:00，晚上6:00-7:00，含免费人体成分、骨密度检测。季度会费899元，免费更换拍线，含免费人体成分、骨密度、运动有氧能力检测及一年复测。年度会员3599元，含入门级球拍、运动毛巾，全年免费更换拍线，含免费人体成分、骨密度检测及免费运动处方开具一次。
+        奇羽记为会员提供骨密度测试、人体成分分析、运动有氧能力、基本体征测试。测试报告会通过微信推送到会员［我的健康报告］菜单里。体验全程由万达健康免费提供。
     </span>
 </section>
 <hr data-am-widget="divider" style="margin: 1rem auto" class="am-divider am-divider-default"/>
 
 <section class="am-container jm-content">
     <h2 class="jm-title">[测试项目]<i class="am-icon-question-circle" style="padding-left: 5px"></i></h2>
+
     <div>
-        <span style="padding-right: 5px">骨密度测试 <i id="test-box1" class="am-icon-square-o"></i></span>
-        <span style="padding-right: 5px">人体成份分析 <i id="test-box2" class="am-icon-square-o"></i></span>
-        <span style="padding-right: 5px">运动有氧能力 <i id="test-box3" class="am-icon-square-o"></i></span>
+        <span style="padding-right: 5px">骨密度测试 <i class="am-icon-square-o"></i></span>
+        <span style="padding-right: 5px">人体成份分析 <i class="am-icon-square-o"></i></span>
+        <span style="padding-right: 5px">运动有氧能力 <i class="am-icon-square-o"></i></span>
     </div>
 </section>
 
@@ -78,8 +79,7 @@
 <section class="am-container jm-content">
     <h2 class="jm-title">[定制须知]<i class="am-icon-question-circle" style="padding-left: 5px"></i></h2>
     <span>
-
-        adfadfasdfasdfs
+        奇羽记免费为会员量身定制如下项目：健康处方、运动处方、心理咨询、音乐理疗、基因测试、康护保健等衍生服务。报告会通过微信推送到会员［我的健康报告］菜单里。体验全程由万达健康免费提供。
     </span>
 </section>
 
@@ -87,6 +87,7 @@
 
 <section class="am-container jm-content">
     <h2 class="jm-title">[个性化项目]<i class="am-icon-question-circle" style="padding-left: 5px"></i></h2>
+
     <div>
         <span style="padding-right: 5px">健康处方 <i class="am-icon-square-o"></i></span>
         <span style="padding-right: 5px">运动处方 <i class="am-icon-square-o"></i></span>
@@ -117,28 +118,5 @@
         </div>
     </div>
 </div>
-
-<script>
-    $(document).ready(function () {
-        var box1 = $('#test-box1');
-        var box2 = $('#test-box2');
-        var box3 = $('#test-box3');
-        box1.click(function () {
-            box1.alterClass("am-icon-square-o", "am-icon-check-square-o");
-            box2.alterClass("am-icon-check-square-o", "am-icon-square-o");
-            box3.alterClass("am-icon-check-square-o", "am-icon-square-o");
-        });
-        box2.click(function () {
-            box2.alterClass("am-icon-square-o", "am-icon-check-square-o");
-            box1.alterClass("am-icon-check-square-o", "am-icon-square-o");
-            box3.alterClass("am-icon-check-square-o", "am-icon-square-o");
-        });
-        box3.click(function () {
-            box3.alterClass("am-icon-square-o", "am-icon-check-square-o");
-            box2.alterClass("am-icon-check-square-o", "am-icon-square-o");
-            box1.alterClass("am-icon-check-square-o", "am-icon-square-o");
-        });
-    });
-</script>
 </body>
 </html>
