--- a/src/main/webapp/main.html
+++ b/src/main/webapp/main.html
@@ -48,11 +48,11 @@
 <!--</div>-->
 <!--</div>-->
 <div id="main-list" class="main-list"></div>
-<div class="main-bottom-bar">
-    <a href="#" id="imgUrl" style="display: block">
-        <img class="main-add" src="assets/i/add.png" id="imgAdd"/>
-    </a>
-</div>
+<!--<div class="main-bottom-bar">-->
+<!--<a href="#" id="imgUrl" style="display: block">-->
+<!--<img class="main-add" src="assets/i/add.png" id="imgAdd"/>-->
+<!--</a>-->
+<!--</div>-->
 <div class="main-null" id="main-null"></div>
 
 <!--[if (gte IE 9)|!(IE)]><!-->
