--- a/src/main/webapp/healthManage.html
+++ b/src/main/webapp/healthManage.html
@@ -57,52 +57,100 @@
 </header>
 <section class="am-container jm-content">
     <h2 class="jm-title" style="padding-top: 15px">[测试须知]</h2>
-    <hr data-am-widget="divider" style="margin: 0.5rem auto" class="am-divider am-divider-dotted"/>
+    <!--<hr data-am-widget="divider" style="margin: 0.5rem auto" class="am-divider am-divider-dotted"/>-->
     <span>
         奇羽记为会员提供骨密度测试、人体成分分析、运动有氧能力、基本体征测试。测试报告会通过微信推送到会员［我的健康报告］菜单里。体验全程由万达健康免费提供。
     </span>
+    <hr data-am-widget="divider" style="margin: 1rem auto" class="am-divider am-divider-dotted"/>
+
 </section>
-<hr data-am-widget="divider" style="margin: 1rem auto" class="am-divider am-divider-default"/>
+<!--<hr data-am-widget="divider" style="margin: 1rem auto" class="am-divider am-divider-default"/>-->
 
 <section class="am-container jm-content">
     <h2 class="jm-title">[测试项目]<i class="am-icon-question-circle" style="padding-left: 5px"></i></h2>
-
-    <div>
-        <span style="padding-right: 5px">骨密度测试 <i class="am-icon-square-o"></i></span>
-        <span style="padding-right: 5px">人体成份分析 <i class="am-icon-square-o"></i></span>
-        <span style="padding-right: 5px">运动有氧能力 <i class="am-icon-square-o"></i></span>
+    <!--<hr data-am-widget="divider" style="margin: 0.5rem auto" class="am-divider am-divider-dotted"/>-->
+    <div class="am-g">
+        <div class="am-u-sm-6">
+            <div style="height: 25px;">
+        <span style="padding-right: 5px">骨密度测试 <a class="am-icon-square-o" id="box7"
+                                                  style="font-size: 20px;display: block;position: relative;left: 95px; top: -26px;"
+                                                  onclick="choose('box7');"></a></span>
+            </div>
+            <div style="height: 25px;">
+        <span style="padding-right: 5px">人体成份分析 <a class="am-icon-square-o" id="box8"
+                                                   style="font-size: 20px;display: block;position: relative;left: 95px; top: -26px;"
+                                                   onclick="choose('box8');"></a></span>
+            </div>
+        </div>
+        <div class="am-u-sm-6">
+            <div style="height: 25px;">
+        <span style="padding-right: 5px">运动有氧能力 <a class="am-icon-square-o" id="box9"
+                                                   style="font-size: 20px;display: block;position: relative;left: 95px; top: -26px;"
+                                                   onclick="choose('box9');"></a></span>
+            </div>
+        </div>
     </div>
+    <hr data-am-widget="divider" style="margin: 1rem auto" class="am-divider am-divider-dotted"/>
 </section>
 
-<hr data-am-widget="divider" style="margin: 1rem auto" class="am-divider am-divider-default"/>
+<!--<hr data-am-widget="divider" style="margin: 1rem auto" class="am-divider am-divider-default"/>-->
 
 <section class="am-container jm-content">
     <h2 class="jm-title">[定制须知]<i class="am-icon-question-circle" style="padding-left: 5px"></i></h2>
+    <!--<hr data-am-widget="divider" style="margin: 0.5rem auto" class="am-divider am-divider-dotted"/>-->
     <span>
         奇羽记免费为会员量身定制如下项目：健康处方、运动处方、心理咨询、音乐理疗、基因测试、康护保健等衍生服务。报告会通过微信推送到会员［我的健康报告］菜单里。体验全程由万达健康免费提供。
     </span>
+    <hr data-am-widget="divider" style="margin: 1rem auto" class="am-divider am-divider-dotted"/>
 </section>
-
-<hr data-am-widget="divider" style="margin: 1rem auto" class="am-divider am-divider-default"/>
-
 <section class="am-container jm-content">
     <h2 class="jm-title">[个性化项目]<i class="am-icon-question-circle" style="padding-left: 5px"></i></h2>
-
-    <div>
-        <span style="padding-right: 5px">健康处方 <i class="am-icon-square-o"></i></span>
-        <span style="padding-right: 5px">运动处方 <i class="am-icon-square-o"></i></span>
-        <span style="padding-right: 5px">心理咨询 <i class="am-icon-square-o"></i></span>
-        <span style="padding-right: 5px">音乐理疗 <i class="am-icon-square-o"></i></span>
-        <span style="padding-right: 5px">基因测试 <i class="am-icon-square-o"></i></span>
-        <span style="padding-right: 5px">康护保健 <i class="am-icon-square-o"></i></span>
+    <!--<hr data-am-widget="divider" style="margin: 0.5rem auto" class="am-divider am-divider-dotted"/>-->
+    <div class="am-g">
+        <div class="am-u-sm-4">
+            <div style="height: 25px;">
+        <span style="padding-right: 5px">健康处方 <a class="am-icon-square-o" id="box1"
+                                                 style="font-size: 20px;display: block;position: relative;left: 75px; top: -26px;"
+                                                 onclick="choose('box1');"></a></span>
+            </div>
+            <div style="height: 25px;">
+        <span style="padding-right: 5px">运动处方 <a class="am-icon-square-o" id="box2"
+                                                 style="font-size: 20px;display: block;position: relative;left: 75px; top: -26px;"
+                                                 onclick="choose('box2');"></a></span>
+            </div>
+        </div>
+        <div class="am-u-sm-4">
+            <div style="height: 25px;">
+        <span style="padding-right: 5px">心理咨询 <a class="am-icon-square-o" id="box3"
+                                                 style="font-size: 20px;display: block;position: relative;left: 75px; top: -26px;"
+                                                 onclick="choose('box3');"></a></span>
+            </div>
+            <div style="height: 25px;">
+        <span style="padding-right: 5px">音乐理疗 <a class="am-icon-square-o" id="box4"
+                                                 style="font-size: 20px;display: block;position: relative;left: 75px; top: -26px;"
+                                                 onclick="choose('box4');"></a></span>
+            </div>
+        </div>
+        <div class="am-u-sm-4">
+            <div style="height: 25px;">
+        <span style="padding-right: 5px">基因测试 <a class="am-icon-square-o" id="box5"
+                                                 style="font-size: 20px;display: block;position: relative;left: 75px; top: -26px;"
+                                                 onclick="choose('box5');"></a></span>
+            </div>
+            <div style="height: 25px;">
+        <span style="padding-right: 5px">康护保健 <a class="am-icon-square-o" id="box6"
+                                                 style="font-size: 20px;display: block;position: relative;left: 75px; top: -26px;"
+                                                 onclick="choose('box6');"></a></span>
+            </div>
+        </div>
     </div>
 </section>
 
-<div class="am-form-group am-container jm-content">
-    <textarea style="width: 100%;resize: none" rows="5" id="doc-ta-1" placeholder="如有额外需求，请再次备注说明"></textarea>
+<div class="am-form-group am-container jm-content" style="margin-top: 10px;">
+    <textarea class="ad-content" rows="5" placeholder="如有额外需求，请再次备注说明"></textarea>
 </div>
 
-<hr data-am-widget="divider" style="margin: 1.5rem auto 0" class="am-divider am-divider-default"/>
+<!--<hr data-am-widget="divider" style="margin: 1.5rem auto 0" class="am-divider am-divider-default"/>-->
 <div class="jm-btn">
     <button class="am-btn am-btn-secondary" data-am-modal="{target: '#my-alert'}">健康定制</button>
 </div>
@@ -118,5 +166,17 @@
         </div>
     </div>
 </div>
+
+<script>
+    function choose(id) {
+        var box = $('#' + id);
+        if (box.hasClass("am-icon-square-o")) {
+            box.alterClass("am-icon-square-o", "am-icon-check-square-o");
+        }
+        else if (box.hasClass("am-icon-check-square-o")) {
+            box.alterClass("am-icon-check-square-o", "am-icon-square-o");
+        }
+    }
+</script>
 </body>
 </html>
