--- a/src/main/webapp/joinMember.html
+++ b/src/main/webapp/joinMember.html
@@ -57,30 +57,42 @@
 </header>
 <section class="am-container jm-content">
     <h2 class="jm-title" style="padding-top: 15px">[入会须知]</h2>
-    <hr data-am-widget="divider" style="margin: 0.5rem auto" class="am-divider am-divider-dotted"/>
+    <!--<hr data-am-widget="divider" style="margin: 0.5rem auto" class="am-divider am-divider-dotted"/>-->
     <span>
     月费会员299元，活动地点卢湾体育馆、静安体育馆中午12:00-13:00，晚上6:00-7:00，含免费人体成分、骨密度检测。季度会费899元，免费更换拍线，含免费人体成分、骨密度、运动有氧能力检测及一年复测。年度会员3599元，含入门级球拍、运动毛巾，全年免费更换拍线，含免费人体成分、骨密度检测及免费运动处方开具一次。
     </span>
+    <hr data-am-widget="divider" style="margin: 1rem auto;" class="am-divider am-divider-dotted"/>
 </section>
-<hr data-am-widget="divider" style="margin: 1rem auto" class="am-divider am-divider-default"/>
 <section class="am-container jm-content">
-    <h2 class="jm-title" style="padding-bottom: 10px">[收费标准]</h2>
-
-    <div>收费标准：
-        299元／月
-        <a class="am-icon-square-o" id="check-box1"></a>
-        899元／季
-        <a class="am-icon-check-square-o" id="check-box2"></a>
-        599元／年
-        <a class="am-icon-square-o" id="check-box3"></a>
+    <h2 class="jm-title">[收费标准]</h2>
+    <!--<hr data-am-widget="divider" style="margin: 0.5rem auto" class="am-divider am-divider-dotted"/>-->
+    <!--<div>收费标准：-->
+    <div style="height: 20px;">
+        <span>299元／月 </span>
+        <a class="am-icon-square-o"
+           style="display:block;position: relative;top: -27px;left: 82px;font-size: 20px;width:30px;"
+           id="check-box1"></a>
     </div>
-    <hr data-am-widget="divider" style="margin: 0.5rem auto" class="am-divider am-divider-dotted"/>
+    <div style="height: 20px;">
+        <span>899元／季 </span>
+        <a class="am-icon-check-square-o"
+           style="display:block;position: relative;top: -27px;left: 82px;font-size: 20px;width:30px;"
+           id="check-box2"></a>
+    </div>
+    <div style="height: 20px;">
+        <span>599元／年 </span>
+        <a class="am-icon-square-o"
+           style="display:block;position: relative;top: -27px;left: 82px;font-size: 20px;width:30px;"
+           id="check-box3"></a>
+    </div>
+    <!--</div>-->
+    <hr data-am-widget="divider" style="margin: 1rem auto" class="am-divider am-divider-dotted"/>
     <div><i class="am-icon-calendar" style="padding-right: 5px"></i> <span
-            style="color: #006600">2015-09-10 至 2015-12-10</span></div>
-    <div><i class="am-icon-cny" style="padding-right: 13px;padding-left: 2px"></i> 600元／季 <span
+            style="color: #48c395">2015-09-10 至 2015-12-10</span></div>
+    <div><i class="am-icon-cny" style="padding-right: 5px;padding-left: 2px"></i>600元／季 <span
             class="jm-span">在线预付</span></div>
 </section>
-<hr data-am-widget="divider" style="margin: 1.5rem auto 0" class="am-divider am-divider-default"/>
+<!--<hr data-am-widget="divider" style="margin: 1.5rem auto 0" class="am-divider am-divider-default"/>-->
 <div class="jm-btn">
     <button class="am-btn am-btn-secondary" data-am-modal="{target: '#my-alert'}">我要入会</button>
 </div>
