--- a/src/main/webapp/onlineInquiry.html
+++ b/src/main/webapp/onlineInquiry.html
@@ -7,7 +7,7 @@
     <meta name="keywords" content="">
     <meta name="viewport"
           content="width=device-width, initial-scale=1, maximum-scale=1, user-scalable=no">
-    <title>健康管理</title>
+    <title>线上问诊</title>
 
     <!-- Set render engine for 360 browser -->
     <meta name="renderer" content="webkit">
@@ -57,18 +57,17 @@
     </ul>
 </header>
 
-<section>
-    <h2 class="jm-title" style="padding-top: 15px">［问诊须知］</h2>
-    <hr data-am-widget="divider" style="margin: 0.5rem auto" class="am-divider am-divider-dotted"/>
-
-    <span>奇羽记免费为会员提供骨密度测试、人体成份分析、运动有氧能力、基本体征测试。测试报告会通过微信推送到会员［我的健康报告］菜单里。体检全部由万达健康免费提供 <i class="am-icon-question-circle" style="padding-left: 5px"></i></span>
+<section class="am-container jm-content">
+    <h2 class="jm-title" style="padding-top: 15px">[问诊须知]</h2>
+    <span>奇羽记免费为会员提供骨密度测试、人体成份分析、运动有氧能力、基本体征测试。测试报告会通过微信推送到会员［我的健康报告］菜单里。体检全部由万达健康免费提供。</span>
+    <hr data-am-widget="divider" style="margin: 1rem auto" class="am-divider am-divider-dotted"/>
 
 </section>
-<hr data-am-widget="divider" style="margin: 1rem auto" class="am-divider am-divider-default"/>
-<section style="padding: 10px">
-    <span style="color: #848484; margin-top: 5px">发送你健康疑惑，由私人医生在线免费答疑解惑</span>
+<!--<hr data-am-widget="divider" style="margin: 1rem auto" class="am-divider am-divider-default"/>-->
+<section class="am-container jm-content">
+    <p style="color: #666666;font-size: 14px;margin-bottom: 5px;">发送你健康疑惑，由私人医生在线免费答疑解惑</p>
 
-    <textarea style="width: 100%;resize: none" rows="5" id="doc-ta-1"></textarea>
+    <textarea class="ad-content" style="margin-bottom:15px;height:100px;width: 100%;resize: none" rows="5" id="doc-ta-1"></textarea>
 </section>
 
 <div class="jm-btn">
