--- a/src/main/webapp/addDatings.html
+++ b/src/main/webapp/addDatings.html
@@ -36,6 +36,23 @@
     <link rel="stylesheet" href="assets/css/amazeui.min.css">
     <link rel="stylesheet" href="assets/css/app.css">
     <link rel="stylesheet" href="assets/css/spinningwheel.css"/>
+    <style>
+        .am-badge {
+            font-size: 14px;
+        }
+
+        #sw-header {
+            opacity: 1;
+        }
+
+        #sw-wrapper {
+            border-top: 0px solid deepskyblue;
+        }
+
+        #sw-cancel, #sw-done {
+            color: deepskyblue;
+        }
+    </style>
 </head>
 <body class="ad-body">
 <div class="ad-container" style="margin-top: 12px">
@@ -48,34 +65,34 @@
         <div class="ad-location">
             地点
             <span class="am-badge ad-badge am-badge-danger" id="location-text"></span>
-            <a id="location-btn"><i class="am-icon-chevron-right ad-arrows"></i></a>
+            <a id="location-btn"><i class="am-icon-angle-right ad-arrows"></i></a>
         </div>
         <div class="ad-start">
             开始时间
             <span class="am-badge ad-badge am-badge-danger" id="startTime-text"></span>
-            <a id="startTime-btn"><i class="am-icon-chevron-right ad-arrows"></i></a>
+            <a id="startTime-btn"><i class="am-icon-angle-right ad-arrows"></i></a>
         </div>
         <div class="ad-end">
             结束时间
             <span class="am-badge ad-badge am-badge-danger" id="endTime-text"></span>
-            <a id="endTime-btn"><i class="am-icon-chevron-right ad-arrows"></i></a>
+            <a id="endTime-btn"><i class="am-icon-angle-right ad-arrows"></i></a>
         </div>
     </div>
     <div class="ad-info">
         <div class="ad-partner">
             人数
             <span class="am-badge ad-badge am-badge-danger" id="numOfP-text"></span>
-            <a id="numOfP-btn"><i class="am-icon-chevron-right ad-arrows"></i></a>
+            <a id="numOfP-btn"><i class="am-icon-angle-right ad-arrows"></i></a>
         </div>
         <div class="ad-partner">
             对象
             <span class="am-badge ad-badge am-badge-danger" id="partner-text"></span>
-            <a id="partner-btn"><i class="am-icon-chevron-right ad-arrows"></i></a>
+            <a id="partner-btn"><i class="am-icon-angle-right ad-arrows"></i></a>
         </div>
         <div class="ad-age">
             年龄
             <span class="am-badge ad-badge am-badge-danger" id="age-text"></span>
-            <a id="age-btn"><i class="am-icon-chevron-right ad-arrows"></i></a>
+            <a id="age-btn"><i class="am-icon-angle-right ad-arrows"></i></a>
         </div>
     </div>
     <div class="ad-info">
@@ -88,7 +105,9 @@
     </div>
     <div class="ad-button">
         <div class="ad-sub">
-            <button onclick="generateOrder()" class="am-btn am-btn-danger am-round ad-btn">确定发布</button>
+            <button onclick="generateOrder()" class="am-btn am-btn-secondary"
+                    style=" display: block;width: 250px;margin: 0 auto;border-radius: 5px;">确定发布
+            </button>
         </div>
     </div>
 </div>
