--- a/src/main/webapp/individualInfo.html
+++ b/src/main/webapp/individualInfo.html
@@ -35,6 +35,13 @@
 
     <link rel="stylesheet" href="assets/css/amazeui.min.css">
     <link rel="stylesheet" href="assets/css/app.css">
+    <style>
+        .am-form-field:focus {
+            -webkit-box-shadow: none;
+            box-shadow: none;
+        }
+
+    </style>
 </head>
 <body class="ii-body">
 <!--<div class="main-side-bar main-top-bar">-->
@@ -77,10 +84,10 @@
                         position: relative;
                         top: 0px;
                         left: 8px;
-                        font-size: 12.5px;">(必填)
+                        font-size: 14px;">(必填)
             </span>
             <span class="am-badge ii-badge am-badge-danger" id="text-tel">{{tel}}</span>
-            <a class="" id="tel-btn"><i class="am-icon-chevron-right ii-arrows"></i> </a>
+            <a class="" id="tel-btn"><i class="am-icon-angle-right ii-arrows"></i> </a>
         </div>
         <div class="ii-weChat">
             <!--<img src="assets/i/required.png" style="height: 10px; width: 10px;margin-bottom: 3px;">-->
@@ -89,10 +96,10 @@
                         position: relative;
                         top: 0px;
                         left: 8px;
-                        font-size: 12.5px;">(必填)
+                        font-size: 14px;">(必填)
             </span>
             <span class="am-badge ii-badge am-badge-danger" id="text-weChat">{{weChat}}</span>
-            <a id="weChat-btn"><i class="am-icon-chevron-right ii-arrows"></i></a>
+            <a id="weChat-btn"><i class="am-icon-angle-right ii-arrows"></i></a>
         </div>
         <!--<div class="ii-timeLine">-->
         <!--时光轴-->
@@ -105,12 +112,12 @@
         <div class="ii-gender">
             性别
             <span class="am-badge ii-badge am-badge-danger" id="text-gender"></span>
-            <a id="gender-btn"><i class="am-icon-chevron-right ii-arrows"></i></a>
+            <a id="gender-btn"><i class="am-icon-angle-right ii-arrows"></i></a>
         </div>
         <div class="ii-age">
             年龄
             <span class="am-badge ii-badge am-badge-danger" id="text-age">{{age}}岁</span>
-            <a id="age-btn"><i class="am-icon-chevron-right ii-arrows"></i></a>
+            <a id="age-btn"><i class="am-icon-angle-right ii-arrows"></i></a>
         </div>
         <!--<div class="ii-height">-->
         <!--身高-->
@@ -122,17 +129,17 @@
         <!--<span class="am-badge ii-badge am-badge-danger" id="text-weight">{{weight}}kg</span>-->
         <!--<a id="weight-btn"><i class="am-icon-chevron-right ii-arrows"></i></a>-->
         <!--</div>-->
-        <div class="ii-sports">
-            喜欢的运动
-            <div class="am-badge ii-icon" style="bottom: 4px;">
-                {{#each sports}}
-                <img src="{{iconUrl}}" class="ii-sports-icon"/>
-                {{/each}}
-                <a href="selectSports.html?userId={{id}}">
-                    <i class="am-icon-plus-circle am-icon-lg" style="color: darkgrey"></i>
-                </a>
-            </div>
-        </div>
+        <!--<div class="ii-sports">-->
+        <!--喜欢的运动-->
+        <!--<div class="am-badge ii-icon" style="bottom: 4px;">-->
+        <!--{{#each sports}}-->
+        <!--<img src="{{iconUrl}}" class="ii-sports-icon"/>-->
+        <!--{{/each}}-->
+        <!--<a href="selectSports.html?userId={{id}}">-->
+        <!--<i class="am-icon-plus-circle am-icon-lg" style="color: darkgrey"></i>-->
+        <!--</a>-->
+        <!--</div>-->
+        <!--</div>-->
         <!--<div class="ii-clause">-->
         <!--隐私条款-->
         <!--<a href="clause.html">-->
