--- a/src/main/webapp/addDatings.html
+++ b/src/main/webapp/addDatings.html
@@ -46,11 +46,15 @@
         }
 
         #sw-wrapper {
-            border-top: 0px solid deepskyblue;
+            border-top: 0px solid #4EC296;
         }
 
         #sw-cancel, #sw-done {
-            color: deepskyblue;
+            color: #4EC296;
+        }
+
+        .am-modal-btn {
+            color: #4EC296;
         }
     </style>
 </head>
@@ -105,8 +109,9 @@
     </div>
     <div class="ad-button">
         <div class="ad-sub">
-            <button onclick="generateOrder()" class="am-btn am-btn-secondary"
-                    style=" display: block;width: 250px;margin: 0 auto;border-radius: 5px;">确定发布
+            <button onclick="generateOrder()" class="am-btn am-btn-success"
+                    style=" display: block;width: 250px;margin: 0 auto;border-radius: 5px;background-color: #4EC296;border-color: #4EC296;">
+                确定发布
             </button>
         </div>
     </div>
