--- a/src/main/webapp/healthManage.html
+++ b/src/main/webapp/healthManage.html
@@ -71,21 +71,21 @@
     <!--<hr data-am-widget="divider" style="margin: 0.5rem auto" class="am-divider am-divider-dotted"/>-->
     <div class="am-g">
         <div class="am-u-sm-6">
-            <div style="height: 25px;">
+            <div style="height: 25px;overflow: hidden;">
         <span style="padding-right: 5px">骨密度测试 <a class="am-icon-square-o" id="box7"
-                                                  style="font-size: 20px;display: block;position: relative;left: 95px; top: -26px;"
+                                                  style="font-size: 20px;display: block;position: relative;left: 95px; top: -26px;width: 20px;"
                                                   onclick="choose('box7');"></a></span>
             </div>
-            <div style="height: 25px;">
+            <div style="height: 25px;overflow: hidden;">
         <span style="padding-right: 5px">人体成份分析 <a class="am-icon-square-o" id="box8"
-                                                   style="font-size: 20px;display: block;position: relative;left: 95px; top: -26px;"
+                                                   style="font-size: 20px;display: block;position: relative;left: 95px; top: -26px;width: 20px;"
                                                    onclick="choose('box8');"></a></span>
             </div>
         </div>
         <div class="am-u-sm-6">
-            <div style="height: 25px;">
+            <div style="height: 25px;overflow: hidden;">
         <span style="padding-right: 5px">运动有氧能力 <a class="am-icon-square-o" id="box9"
-                                                   style="font-size: 20px;display: block;position: relative;left: 95px; top: -26px;"
+                                                   style="font-size: 20px;display: block;position: relative;left: 95px; top: -26px;width: 20px;"
                                                    onclick="choose('box9');"></a></span>
             </div>
         </div>
@@ -108,46 +108,46 @@
     <!--<hr data-am-widget="divider" style="margin: 0.5rem auto" class="am-divider am-divider-dotted"/>-->
     <div class="am-g">
         <div class="am-u-sm-4">
-            <div style="height: 25px;">
+            <div style="height: 25px;overflow: hidden;">
         <span style="padding-right: 5px">健康处方 <a class="am-icon-square-o" id="box1"
-                                                 style="font-size: 20px;display: block;position: relative;left: 75px; top: -26px;"
+                                                 style="font-size: 20px;display: block;position: relative;left: 75px; top: -26px;width: 20px;"
                                                  onclick="choose('box1');"></a></span>
             </div>
-            <div style="height: 25px;">
+            <div style="height: 25px;overflow: hidden;">
         <span style="padding-right: 5px">运动处方 <a class="am-icon-square-o" id="box2"
-                                                 style="font-size: 20px;display: block;position: relative;left: 75px; top: -26px;"
+                                                 style="font-size: 20px;display: block;position: relative;left: 75px; top: -26px;width: 20px;"
                                                  onclick="choose('box2');"></a></span>
             </div>
         </div>
         <div class="am-u-sm-4">
-            <div style="height: 25px;">
+            <div style="height: 25px;overflow: hidden;">
         <span style="padding-right: 5px">心理咨询 <a class="am-icon-square-o" id="box3"
-                                                 style="font-size: 20px;display: block;position: relative;left: 75px; top: -26px;"
+                                                 style="font-size: 20px;display: block;position: relative;left: 75px; top: -26px;width: 20px;"
                                                  onclick="choose('box3');"></a></span>
             </div>
-            <div style="height: 25px;">
+            <div style="height: 25px;overflow: hidden;">
         <span style="padding-right: 5px">音乐理疗 <a class="am-icon-square-o" id="box4"
-                                                 style="font-size: 20px;display: block;position: relative;left: 75px; top: -26px;"
+                                                 style="font-size: 20px;display: block;position: relative;left: 75px; top: -26px;width: 20px;"
                                                  onclick="choose('box4');"></a></span>
             </div>
         </div>
         <div class="am-u-sm-4">
-            <div style="height: 25px;">
+            <div style="height: 25px;overflow: hidden;">
         <span style="padding-right: 5px">基因测试 <a class="am-icon-square-o" id="box5"
-                                                 style="font-size: 20px;display: block;position: relative;left: 75px; top: -26px;"
+                                                 style="font-size: 20px;display: block;position: relative;left: 75px; top: -26px;width: 20px;"
                                                  onclick="choose('box5');"></a></span>
             </div>
-            <div style="height: 25px;">
+            <div style="height: 25px;overflow: hidden;">
         <span style="padding-right: 5px">康护保健 <a class="am-icon-square-o" id="box6"
-                                                 style="font-size: 20px;display: block;position: relative;left: 75px; top: -26px;"
+                                                 style="font-size: 20px;display: block;position: relative;left: 75px; top: -26px;width: 20px;"
                                                  onclick="choose('box6');"></a></span>
             </div>
         </div>
     </div>
 </section>
 
-<div class="am-form-group am-container jm-content" style="margin-top: 10px;">
-    <textarea class="ad-content" rows="5" placeholder="如有额外需求，请再次备注说明"></textarea>
+<div class="jm-content" style="padding-top: 10px;">
+    <textarea class="ad-content" placeholder="如有额外需求，请再次备注说明"></textarea>
 </div>
 
 <!--<hr data-am-widget="divider" style="margin: 1.5rem auto 0" class="am-divider am-divider-default"/>-->
