--- a/src/main/webapp/individualInfo.html
+++ b/src/main/webapp/individualInfo.html
@@ -41,6 +41,9 @@
             box-shadow: none;
         }
 
+        .am-modal-btn {
+            color: #4EC296;
+        }
     </style>
 </head>
 <body class="ii-body">
