--- a/src/main/webapp/joinMember.html
+++ b/src/main/webapp/joinMember.html
@@ -7,7 +7,7 @@
     <meta name="keywords" content="">
     <meta name="viewport"
           content="width=device-width, initial-scale=1, maximum-scale=1, user-scalable=no">
-    <title>加入会员</title>
+    <title>我要入会</title>
 
     <!-- Set render engine for 360 browser -->
     <meta name="renderer" content="webkit">
@@ -87,9 +87,9 @@
     </div>
     <!--</div>-->
     <hr data-am-widget="divider" style="margin: 1rem auto" class="am-divider am-divider-dotted"/>
-    <div><i class="am-icon-calendar" style="padding-right: 5px"></i> <span
-            style="color: #48c395">2015-09-10 至 2015-12-10</span></div>
-    <div><i class="am-icon-cny" style="padding-right: 5px;padding-left: 2px"></i>600元／季 <span
+    <div><i class="am-icon-calendar" style="color:grey;padding-right: 5px"></i> <span
+            style="color: grey">2015/09/10 至 2015/12/10</span></div>
+    <div style="color: grey"><i class="am-icon-cny" style="padding-right: 5px;padding-left: 2px"></i>600元／季 <span
             class="jm-span">在线预付</span></div>
 </section>
 <!--<hr data-am-widget="divider" style="margin: 1.5rem auto 0" class="am-divider am-divider-default"/>-->
