--- a/src/main/webapp/myHealth.html
+++ b/src/main/webapp/myHealth.html
@@ -48,7 +48,10 @@
         .am-tabs-d2 .am-tabs-nav>.am-active {
             position: relative;
             /*background-color: white;*/
-            border-bottom: 0px solid #0e90d2;
+            border-bottom: 0px solid #4EC296;
+        }
+        .am-tabs-d2 .am-tabs-nav>.am-active a {
+            color: #4EC296;
         }
     </style>
 </head>
