--- a/src/main/webapp/datingCoach.html
+++ b/src/main/webapp/datingCoach.html
@@ -111,7 +111,7 @@
 </section>
 <!--<hr data-am-widget="divider" style="margin: 1.5rem auto 0" class="am-divider am-divider-default"/>-->
 <div class="jm-btn">
-    <button class="am-btn am-btn-secondary" data-am-modal="{target: '#my-alert'}">我要私教</button>
+    <button class="am-btn am-btn-success" data-am-modal="{target: '#my-alert'}">我要私教</button>
 </div>
 <div class="am-modal am-modal-alert" tabindex="-1" id="my-alert">
     <div class="am-modal-dialog">
