--- a/src/main/webapp/main.html
+++ b/src/main/webapp/main.html
@@ -126,11 +126,11 @@
                     <div class="main-button">
                         {{#if enabled}}
                         <button onclick="generateOrderCustomer('{{orderId}}')" type="button"
-                                class="am-btn am-btn-success am-round am-btn-xs main-green" id="main-confirm">
+                                class="am-btn am-btn-success am-radius am-btn-xs main-green" id="main-confirm">
                             我要预约
                         </button>
                         {{else}}
-                        <button type="button" class="am-btn am-btn-default am-round am-btn-xs"
+                        <button type="button" class="am-btn am-btn-default am-radius am-btn-xs"
                                 disabled="disabled">来晚了
                         </button>
                         {{/if}}
